# crossfit_bot

./: pyproject.toml  requirements.txt
app/: gpt_model.py  main.py  teat.py
src/: .env  __main__.py  config.py  config_reader.py  generators.py
src/handlers/: bot_messages.py  questionare.py  user_commands.py
src/keyboards/: reply.py
src/utils/: __init__.py  states.py  text.py
